--- a/features/landing/features/home/organisms/Corporate/Corporate.css
+++ b/features/landing/features/home/organisms/Corporate/Corporate.css
@@ -2,10 +2,10 @@
   padding: 120px 0;
 
   @media (--mediumDown) {
-    padding: 32px 16px;
+    padding: 40px 16px 48px 16px;
   }
 
   @media (--smallDown) {
-    padding: 32px 0;
+    padding: 40px 0 48px 0;
   }
 }
