--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -5,7 +5,7 @@
 
   @media (--smallDown) {
     max-width: 100vw;
-    margin-bottom: 40px;
+    margin-bottom: 32px;
     overflow: scroll;
   }
 }
@@ -13,13 +13,14 @@
 .buttonWrapper { 
   width: 176px;
   @media (--smallDown) {
+    width: 120px;
     padding-right: 16px;
   }
 }
 
 .buttonContainer {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   height: 112px;
   margin-bottom: 24px;
