--- a/features/landing/features/home/organisms/Corporate/components/Program/Program.css
+++ b/features/landing/features/home/organisms/Corporate/components/Program/Program.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     max-width: 100vw;
     padding: 0 16px;
-    margin-bottom: 32px;
+    margin-bottom: 80px;
   }
 }
 
@@ -16,6 +16,8 @@
   text-align: left;
 
   @media (--smallDown) {
+    display: flex;
+    flex-direction: column-reverse;
     margin-bottom: 16px;
   }
 }
@@ -23,14 +25,23 @@
 .title {
   margin-bottom: 16px;
   font: var(--title-regular);
+
+  @media (--smallDown) {
+    margin-bottom: 0;
+  }
 }
 
 .text {
   flex-basis: 50%;
+  margin-bottom: 0;
   font: var(--text18-28);
   text-align: left;
 }
 
 .logo {
   width: 80px;
+
+  @media (--smallDown) {
+    margin-bottom: 16px;
+  }
 }
