--- a/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
+++ b/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
@@ -13,6 +13,7 @@
   @media (--smallDown) {
     grid-template-columns: repeat(3, 80px);
     grid-gap: 16px;
+    margin: 0 auto;
   }
 }
 
@@ -31,6 +32,7 @@
   @media (--smallDown) {
     grid-gap: 16px;
     align-self: baseline;
+    width: 100%;
     min-height: 80px;
   }
 }
