--- a/features/landing/features/home/organisms/Info/Info.css
+++ b/features/landing/features/home/organisms/Info/Info.css
@@ -1,6 +1,6 @@
 .quote {
   @media (--smallDown) {
-    margin-left: -16px;
+    padding: 0 16px 32px 16px;
   }
 }
 
@@ -8,11 +8,16 @@
   position: relative;
   max-width: 280px;
   padding: 16px;
-  margin: 0 0 36px 0;
+  margin: 0 0 8px 0;
   font: var(--text14-20);
   text-align: left;
   background-color: #FFEAB7;
   border-radius: 20px;
+  border-bottom-left-radius: 0;
+
+  @media (--smallDown) {
+    max-width: none;
+  }
 }
 
 .author {
