--- a/features/landing/features/home/organisms/Main/components/About/About.css
+++ b/features/landing/features/home/organisms/Main/components/About/About.css
@@ -7,12 +7,16 @@
     flex-direction: column;
     width: 100vw;
     padding: 0 16px;
-    margin-bottom: 40px;
+    margin-bottom: 48px;
   }
 }
 
 .logo {
   width: 79px;
+
+  @media (--smallDown) {
+    margin-bottom: 16px;
+  }
 }
 
 .topic {
@@ -20,6 +24,8 @@
   text-align: left;
 
   @media (--smallDown) {
+    display: flex;
+    flex-direction: column-reverse;
     margin-bottom: 24px;
   }
 }
@@ -27,6 +33,11 @@
 .title {
   margin-bottom: 16px;
   font: var(--title-regular);
+
+  @media (--smallDown) {
+    margin-bottom: 0;
+  }
+
 }
 
 .reasons {
