--- a/features/landing/features/home/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/features/home/organisms/Main/components/Steps/Steps.css
@@ -9,7 +9,8 @@
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    margin-bottom: 24px;
+    padding: 0 16px;
+    margin-bottom: 64px;
     margin-left: 0;
   }
 }
