fix: signout as a manager and doctor

--- a/features/manager/features/menu/organisms/Menu/Menu.css
+++ b/features/manager/features/menu/organisms/Menu/Menu.css
@@ -34,7 +34,21 @@
 }
 
 .consultation {
+  padding-top: 16px;
+  padding-bottom: 15px;
+
   & .menuItemText {
     margin-left: 8px;
   }
+
+  @media (--smallDown) {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--text-color-secondary);
 }
