--- a/ui/organisms/Footer/components/Legal/Legal.css
+++ b/ui/organisms/Footer/components/Legal/Legal.css
@@ -36,6 +36,10 @@
   @media (--smallDown) { 
     padding-right: 12px;
   }
+
+  @media (--xsmallDown) {
+    margin-bottom: 12px;
+  }
 }
 
 .secondaryText {
@@ -48,12 +52,17 @@
     justify-content: space-between;
     margin-bottom: 12px;
   }
+  
+  @media (--xsmallDown) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .breadhead {
   align-self: center;
 
   @media (--xsmallDown) {    
-    margin-left: auto;
+    margin: 0 auto;
   }
 }
