--- a/ui/organisms/Footer/components/Menu/MenuLong.css
+++ b/ui/organisms/Footer/components/Menu/MenuLong.css
@@ -3,8 +3,9 @@
   flex-wrap: wrap;
   max-width: 350px;
 
-  @media (--smallDown) {
-    display: none;
+  @media (--mediumDown) {
+    max-width: none;
+    margin-bottom: 32px;
   }
 }
 
@@ -19,5 +20,26 @@
 
   &:nth-of-type(2n) {
     margin-left: auto;
+  }
+
+  @media (--mediumDown) {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 12px 0;
+    margin-top: 0;
+    border-bottom: 1px solid #EDEDEF;
+
+  &:focus {
+    border-bottom: 1px solid #EDEDEF !important;
+  }
+
+   &:first-of-type {
+      box-shadow: 0px -1px 0px 0px #EDEDEF;
+    }
+
+    &:nth-of-type(2n) {
+      margin-left: 0;
+    }
   }
 }
