--- a/features/common/claim/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/common/claim/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -1,15 +1,15 @@
 .ClaimForm {
   position: relative;
   max-width: 800px;
-  padding: 0 0 40px 0;
+  padding: 0;
   margin: 0 auto;
+  margin-top: 40px;
   text-align: left;
-  background-color: #fff;
-  box-shadow: 0 1px 3px 0 rgba(21, 24, 51, 0.2);
 
   @media (--smallDown) {
     width: 100%;
-    padding: 0 0 32px 0;
+    padding: 0;
+    margin-top: 24px;
   }
 }
 
@@ -22,6 +22,8 @@
   position: relative;
   padding: 48px 160px 56px 160px;
   font: var(--text16-24);
+  background-color: #fff;
+  box-shadow: 0 1px 3px 0 rgba(21, 24, 51, 0.2);
 
   &::after {
     position: absolute;
@@ -64,7 +66,7 @@
   }
 
   @media (--smallDown) {
-    padding: 32px 20px 0;
+    padding: 32px 20px 32px 20px;
   }
 }
 
@@ -87,4 +89,28 @@
 
 .field {
   margin-top: 24px;
+}
+
+.iconBack {
+  width: 24px;
+  height: 24px;
+  margin-right: 4px;
+  fill: var(--color-primary);
+  transform: rotate(180deg);
+}
+.iconForward {
+  width: 24px;
+  height: 24px;
+  margin-right: 4px;
+  fill: var(--color-primary);
+}
+
+.footerBack {
+  display: flex;
+  align-items: center;
+  margin-top: 104px;
+
+  @media (--smallDown) {
+    margin-top: 96px;
+  }
 }
