fix: fix manager situation styles

--- a/features/common/claim/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/common/claim/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -105,7 +105,8 @@
   fill: var(--color-primary);
 }
 
-.footerBack {
+.footerBack,
+.footerForward {
   display: flex;
   align-items: center;
   margin-top: 104px;
