--- a/features/manager/features/claim/editClaim/Situation/organisms/Footer/Footer.css
+++ b/features/manager/features/claim/editClaim/Situation/organisms/Footer/Footer.css
@@ -18,7 +18,13 @@
 }
 
 .footerForward {
-  margin-top: 0;
+  margin-top: 0 !important;
 
   margin-left: auto;
+}
+.footerBack {
+  margin-top: 0 !important;
+
+  margin-right: auto !important;
+  margin-left: 0 !important;
 }
