--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -7,6 +7,7 @@
     max-width: 100vw;
     padding: 0 16px;
     margin: 0 0 24px 0;
+    text-align: left;
   }
 }
 
@@ -18,6 +19,7 @@
     max-width: 100vw;
     padding: 0 16px;
     margin-bottom: 40px;
+    text-align: left;
   }
 }
 
