--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -49,7 +49,9 @@
     font: var(--text18-28);
 
     @media (--smallDown) {
+      display: block;
       width: 100%;
+      margin: 0 auto;
     }
 }
 
@@ -78,9 +80,9 @@
   font: var(--text18-28) !important;
 
   @media (--smallDown) {
+    display: block;
     width: 100%;
-    margin-right: 0;
-    margin-bottom: 16px;
+    margin: 0 auto 16px auto;
     white-space: nowrap;
   }
 }
