--- a/features/login/atoms/OpenModalButton/OpenModalButton.css
+++ b/features/login/atoms/OpenModalButton/OpenModalButton.css
@@ -4,8 +4,9 @@
 
 .openSignUpButton.openSignUpButton.openSignUpButton {
   display: inline-block;
-  padding: 0;
-  font: var(--text14-20);
+  padding: 0 !important;
+  margin-right: 16px !important;
+  font: var(--text14-20) !important;
   color: var(--color-link);
   cursor: pointer;
   background-color: transparent;
