--- a/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
+++ b/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
@@ -35,7 +35,6 @@
     border-top: 1px solid var(--divider-color);
 
     &:last-of-type {
-      margin-bottom: 24px;
       border-bottom: 1px solid var(--divider-color);
     }
 
@@ -78,3 +77,10 @@
     padding: 36px 0;
   }
 } 
+
+.loginButton {
+
+  @media (--smallDown) {
+    margin-top: 24px;
+  }
+}
