--- a/features/common/chat/organisms/EmptyWindow/EmptyWindow.css
+++ b/features/common/chat/organisms/EmptyWindow/EmptyWindow.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 100%;
   padding: 16px 48px;
   color: var(--text-color-secondary);
