feat(manager): add header to clientClaims page

--- a/features/client/features/formFinish/page/FormFinish.css
+++ b/features/client/features/formFinish/page/FormFinish.css
@@ -2,6 +2,10 @@
   background-color: #fff;
 }
 
+.mainHeader {
+  background-color: #fff;
+}
+
 .logo {
   display: flex;
   justify-content: center;
