fix(client): fix sms-send icon styles

--- a/ui/atoms/Input/AntInput.css
+++ b/ui/atoms/Input/AntInput.css
@@ -25,3 +25,8 @@
 .ant-form-item {
   margin: 0;
 }
+
+.ant-input-group-addon {
+  background-color: transparent !important;
+  border: none !important;
+}
