--- a/features/manager/features/quotaControl/molecules/TopRow/TopRow.css
+++ b/features/manager/features/quotaControl/molecules/TopRow/TopRow.css
@@ -5,7 +5,8 @@
   padding-bottom: 16px;
 }
 
-.left, .right {
+.left,
+.right {
   display: flex;
   flex-direction: row;
 }
@@ -20,4 +21,9 @@
   & > * {
     margin-left: 12px;
   }
+}
+
+.button {
+  align-self: center;
+  white-space: nowrap !important;
 }
