--- a/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -13,7 +13,8 @@
 .answer {
   padding: 12px 16px;
   margin: 0 0 24px 0;
-  background-color: #F7F6F2;
+  white-space: pre-line;
+  background-color: #f7f6f2;
   border-radius: 16px;
 
   @media (--smallDown) {
@@ -26,9 +27,8 @@
     margin-bottom: 0;
 
     & .answer {
-        margin-bottom: 0;
-      }
-
+      margin-bottom: 0;
+    }
 
     @media (--smallDown) {
       margin-bottom: 32px;
@@ -63,12 +63,12 @@
   font: var(--title-medium);
 
   @media (--smallDown) {
-    margin: 0 0 16px 0;    
+    margin: 0 0 16px 0;
   }
 }
 
 .question {
   margin: 0 0 8px 0;
   font-weight: 500;
-  white-space: pre-line
+  white-space: pre-line;
 }
