--- a/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
+++ b/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
@@ -76,17 +76,16 @@
   & a {
     padding: 36px 0;
   }
-} 
+}
 
 .loginButton {
-
-  @media (--smallDown) {
+  @media (--mediumDown) {
     margin-top: 24px;
   }
 }
 
 .mobileMenuWrapper {
-  @media (--smallDown) {
+  @media (--mediumDown) {
     width: 100%;
   }
 }
