--- a/features/common/claim/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/common/claim/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -61,6 +61,7 @@
 }
 
 .footer {
+  position: relative;
   &::after {
     display: none;
   }
@@ -116,6 +117,20 @@
   }
 }
 
+.draftContainer {
+  position: absolute;
+  top: 112px;
+  display: flex;
+  align-items: center;
+}
+
 .draftNotification {
-  background-color: pink;
+  font: var(--text16-24);
+  color: #82839b;
+}
+
+.iconSuccess {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
 }
