--- a/features/common/uploader/Uploader.css
+++ b/features/common/uploader/Uploader.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 .fileInput {
   display: none !important;
 }
@@ -7,6 +13,7 @@
   display: inline-block;
   padding: 8px 20px;
   margin-top: 8px;
+  margin-bottom: 8px;
   color: #ffffff;
   cursor: pointer;
   background-color: var(--color-primary);
@@ -20,5 +27,5 @@
 }
 
 .link {
-  margin-left: 8px;
+  margin-top: 8px;
 }
