--- a/features/common/uploader/Uploader.css
+++ b/features/common/uploader/Uploader.css
@@ -8,12 +8,19 @@
   display: none !important;
 }
 
+.row {
+  & > * {
+    float: left;
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+  }
+}
+
 .fileLabel {
   position: relative;
   display: inline-block;
   padding: 8px 20px;
-  margin-top: 8px;
-  margin-bottom: 8px;
   color: #ffffff;
   cursor: pointer;
   background-color: var(--color-primary);
