fix(landing): fix buttons styles

--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -29,6 +29,7 @@
 
   @media (--smallDown) {
     width: calc(100% - 32px);
+    max-width: 300px;
     margin: 24px auto 0 auto !important;
   }
 }
