--- a/features/landing/features/home/organisms/Main/components/About/About.css
+++ b/features/landing/features/home/organisms/Main/components/About/About.css
@@ -58,7 +58,7 @@
 
 .button.button.button.button {
   @media (--smallDown) {
-    padding: 17px 36px;
-    font: var(--text18-28)
+    display: block;
+    margin-right: auto;
   }
 }
