--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -51,6 +51,7 @@
     @media (--smallDown) {
       display: block;
       width: 100%;
+      max-width: 300px;
       margin: 0 auto;
     }
 }
@@ -82,6 +83,7 @@
   @media (--smallDown) {
     display: block;
     width: 100%;
+    max-width: 300px;
     margin: 0 auto 16px auto;
     white-space: nowrap;
   }
