--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -1,6 +1,8 @@
 .button {
+  cursor: pointer;
+  background-color: transparent;
   border-radius: 8px;
-
+  
   &[disabled] {
     opacity: 0.4;
   }
@@ -56,21 +58,27 @@
 /* size */
 
 .extra-large {
-  padding: 17px 36px 19px 36px;
+  padding: 17px 36px;
   font: var(--text18-28);
+
+  @media (--smallDown) {
+    padding: 11px 28px;
+    font: var(--text16-24);
+    line-height: 24px;
+  }
 }
 
 .large {
-  padding: 11px 28px 13px 28px;
+  padding: 11px 28px;
   font: var(--text16-24);
 }
 
 .medium {
-  padding: 7px 20px 9px 20px;
+  padding: 7px 20px;
   font: var(--text16-24);
 }
 
 .small {
-  padding: 5px 16px 7px 16px;
+  padding: 5px 16px;
   font: var(--text14-20);
 }
