--- a/features/common/claim/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
+++ b/features/common/claim/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
@@ -51,11 +51,10 @@
   }
 
   & .button.button {
+    display: block;
     width: 100%;
     max-width: 480px;
-    padding: 18px 20px;
     margin: 0 auto;
-    font: var(--text18-28);
 
     @media (--smallDown) {
       max-width: 328px;
