feat(client): add refused comment to notification

--- a/features/client/features/consultation/molecules/Notification/Notification.css
+++ b/features/client/features/consultation/molecules/Notification/Notification.css
@@ -5,7 +5,8 @@
   margin: 0 auto 24px auto;
   background-color: #fff;
   border-top: 3px solid var(--color-highlight);
-  box-shadow: 0 0 4px 0 rgba(63,63,68,0.04), 0 0 16px 0 rgba(63,63,68,0.12);
+  box-shadow: 0 0 4px 0 rgba(63, 63, 68, 0.04),
+    0 0 16px 0 rgba(63, 63, 68, 0.12);
 
   @media (--smallDown) {
     padding: 20px 16px 24px;
@@ -19,10 +20,11 @@
 }
 
 .text {
-  max-width: 520px; 
+  max-width: 520px;
   margin: 0;
   margin-bottom: 20px;
   color: var(--text-color-secondary);
+  white-space: pre-line;
 }
 
 .logo {
