--- a/ui/Loader/Loader.css
+++ b/ui/Loader/Loader.css
@@ -1,7 +1,7 @@
 .Loader {
-  padding: 30px 50px;
-  margin: 20px 0;
+  padding: 0;
+  margin: 0;
   text-align: center;
-  background: rgba(0,0,0,0.05);
+  background: rgba(0, 0, 0, 0.05);
   border-radius: 4px;
 }
