--- a/features/common/claim/features/editClaim/features/Situation/organisms/SurveyAddFieldContainer/SurveyAddFieldContainer.css
+++ b/features/common/claim/features/editClaim/features/Situation/organisms/SurveyAddFieldContainer/SurveyAddFieldContainer.css
@@ -19,5 +19,10 @@
 }
 
 .filesButton {
-  margin: 16px 0 8px 0;
+  margin: 24px 0 8px 0;
+}
+
+.labelSmall {
+  display: block;
+  margin: 16px 0 8px;
 }
