--- a/src/ui/toggle/Toggle.css
+++ b/src/ui/toggle/Toggle.css
@@ -4,6 +4,7 @@
   --radius: 22px;
   --toggle-size: 36px;
 
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,7 +39,7 @@
   background-color: var(--color-primary);
 
   &::after {
-    left: 62px;
+    left: 54px;
   }
 
   &:hover:not(.disabled), &:focus:not(.disabled) {
@@ -54,7 +55,7 @@
   background-color: var(--color-inactive);
 
   &::after {
-    left: 8px
+    left: 0
   }
 
   &:hover:not(.disabled), &:focus:not(.disabled) {
