--- a/features/doctor/features/consultation/organisms/Answer.css
+++ b/features/doctor/features/consultation/organisms/Answer.css
@@ -1,6 +1,6 @@
-.Answer {
+.AnswerButton {
+  margin-right: 16px;
   margin-bottom: 64px;
-  margin-left: 16px;
   @media (--smallDown) {
     margin-bottom: 48px;
   }
