--- a/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
+++ b/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
@@ -1,10 +1,20 @@
 .questionNotification {
+  padding: 32px 16px;
   margin-bottom: 72px;
   text-align: center;
+  background-color: #ffd46d;
 
   @media (--smallDown) {
-    padding: 0 16px;
-    margin-bottom: 48px;
+    margin: 0 -16px 48px -16px;
+  }
+}
+
+.container {
+  max-width: 560px;
+  margin: 0 auto;
+  text-align: left;
+  @media (--smallDown) {
+    margin: 0 16px;
   }
 }
 
@@ -18,17 +28,12 @@
 }
 
 .text {
-  max-width: 560px;
-  margin: 0 auto;
-  color: var(--text-color-secondary);
+  margin: 0 0 16px 0;
+  font: var(--text18-28);
 }
 
-.button.button.button {
-  display: block;
-  padding: 20px 36px;
-  margin: 0 auto;
-  margin-bottom: 24px;
-  white-space: nowrap;
+.finishButton.finishButton.finishButton {
+  margin-right: 12px;
 
   @media (max-width: 360px) {
     padding: 20px 24px;
