--- a/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -1,12 +1,12 @@
 .expertAnswers {
   padding: 48px 120px 64px;
-  margin-bottom: 64px;
+  margin-bottom: 0;
   background-color: #fff;
   border-top: 3px solid var(--color-highlight);
 
   @media (--smallDown) {
     padding: 28px 16px 40px;
-    margin-bottom: 48px;
+    margin-bottom: 0;
   }
 }
 
