--- a/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -3,6 +3,8 @@
   margin-bottom: 0;
   background-color: #fff;
   border-top: 3px solid var(--color-highlight);
+  box-shadow: 0 0 1px 1px rgba(63, 63, 68, 0.04),
+    0 1px 3px 0 rgba(63, 63, 68, 0.16);
 
   @media (--smallDown) {
     padding: 28px 16px 40px;
