--- a/features/common/consultation/organisms/ExpertAnswers/components/Footer/Footer.css
+++ b/features/common/consultation/organisms/ExpertAnswers/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   display: flex;
   padding: 16px 0 0 0;
   font: var(--text12-16);
-  border-top: 1px solid  rgba(21,24,51,0.12);
+  border-top: 1px solid rgba(21, 24, 51, 0.12);
 }
 
 .item {
@@ -16,4 +16,8 @@
 .text {
   margin: 0;
   color: var(--text-color-secondary);
+}
+
+.date {
+  margin: 0;
 }
