--- a/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
+++ b/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
@@ -10,7 +10,7 @@
 }
 
 .container {
-  max-width: 560px;
+  max-width: 566px;
   margin: 0 auto;
   text-align: left;
   @media (--smallDown) {
@@ -38,4 +38,25 @@
   @media (max-width: 360px) {
     padding: 20px 24px;
   }
+}
+
+.chatButton {
+  color: var(--color-link);
+  border-bottom: 1px solid transparent;
+
+  &:hover {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+
+  &:active {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+}
+
+.icon {
+  width: 28px;
+  height: 28px;
+  margin-bottom: -4px;
 }
