--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -1,6 +1,7 @@
 .page {
   position: relative;
   flex-grow: 1;
+  max-width: 100vw;
   padding-top: 40px;
   padding-bottom: 120px;
   background-color: var(--background-color);
