--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -3,7 +3,8 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  padding: 0 32px;  
+  max-width: 100vw;
+  padding: 0 32px;
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
 
