--- a/features/common/claim/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
+++ b/features/common/claim/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
@@ -55,10 +55,14 @@
     width: 100%;
     max-width: 480px;
     margin: 0 auto;
+  }
 
-    @media (--smallDown) {
-      max-width: 328px;
-    }
+  & .laterButton.laterButton {
+    display: block;
+    width: 100%;
+    max-width: 480px;
+    margin: 0 auto;
+    margin-top: 16px;
   }
 }
 
@@ -190,4 +194,8 @@
   @media (--smallDown) {
     padding: 32px 20px 32px 20px;
   }
+}
+
+.questionsFooterText {
+  margin-bottom: 24px;
 }
