fix(modal): fix scroll on safari

--- a/ui/config.css
+++ b/ui/config.css
@@ -101,6 +101,10 @@ body {
   z-index: 20;
 }
 
+.ReactModal__Body--open {
+  overflow-y: hidden !important;
+}
+
 [class^='ReactModal'] {
   z-index: 20;
 
