--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -1,18 +1,19 @@
 .Modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  position: relative;
+
+  z-index: 25;
+  display: block;
   min-width: 400px;
   min-height: 240px;
-  max-height: calc(100% - 50px);
+
   padding: 16px;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  overflow: hidden;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
     0 0 20px 0 rgba(63, 63, 68, 0.12);
-  transform: translate(-50%, -50%);
 
   @media (--smallDown) {
     width: 100%;
@@ -20,5 +21,5 @@
     max-width: auto;
     padding: 16px 0 0;
     border-radius: 0;
-  }
+  } 
 }
