--- a/ui/config.css
+++ b/ui/config.css
@@ -101,8 +101,18 @@ body {
   z-index: 20;
 }
 
-.ReactModal__Body--open {
-  overflow-y: hidden !important;
+.ReactModal__Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 [class^='ReactModal'] {
