--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -14,6 +14,7 @@
   border-radius: 8px;
   box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
     0 0 20px 0 rgba(63, 63, 68, 0.12);
+  transform: translateY(10%);
 
   @media (--smallDown) {
     width: 100%;
@@ -21,5 +22,5 @@
     max-width: auto;
     padding: 16px 0 0;
     border-radius: 0;
-  } 
+  }
 }
