--- a/ui/config.css
+++ b/ui/config.css
@@ -105,14 +105,16 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+
   z-index: 20;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  
   justify-content: center;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 [class^='ReactModal'] {
