--- a/src/ui/external-link/ExternalLink.css
+++ b/src/ui/external-link/ExternalLink.css
@@ -1,3 +1,14 @@
 .link {
-  color: var(--color-link); 
+    color: var(--text-color-primary);
+    text-decoration: none;
+    cursor: pointer;
+
+  &:hover {
+    color: var(--color-link); 
+  }
+
+  &:active {
+    color: var(--color-link); 
+  }
 }
+
