--- a/features/login/features/confirm/atoms/Conditions/Conditions.css
+++ b/features/login/features/confirm/atoms/Conditions/Conditions.css
@@ -4,6 +4,6 @@
   color: var(--text-color-secondary);
 }
 
-.link.link.link.link {
-  font: var(--text14-20);
+.link {
+  font: var(--text14-20) !important;
 }
