--- a/features/common/consultation/atoms/OpenChatButton/OpenChatButton.css
+++ b/features/common/consultation/atoms/OpenChatButton/OpenChatButton.css
@@ -13,14 +13,10 @@
   background-color: #fff;
   border: 1px solid var(--divider-color);
   border-radius: 50%;
-  box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1), 0 3px 8px rgba(60, 84, 238, 0.2);
-  
+  box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
+    0 3px 8px rgba(60, 84, 238, 0.2);
+
   @media (--mediumDown) {
     display: flex;
   }
-}
-
-.icon {
-  width: 24px;
-  height: 24px;
 }
