--- a/ui/LogoClient/Logo.css
+++ b/ui/LogoClient/Logo.css
@@ -1,6 +1,6 @@
 .logo {
-  width: 200px;
-  height: 38px;
+  width: 200px !important;
+  height: 38px !important;
 
   @media (--smallDown) {
     width: 168px;
@@ -12,7 +12,6 @@
   max-height: 55px;
   padding: 9px 0 8px 0;
   cursor: pointer;
-
 
   @media (--smallDown) {
     max-height: 48px;
