--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -16,12 +16,14 @@
 }
 
 .logo.logo.logo {
+  display: flex;
+  align-items: center;
   height: 96px;
   padding: 24px 0;
 
   @media (--smallDown) {
     height: 48px;
-    padding: 8px 0;    
+    padding: 8px 0;
   }
 }
 
@@ -36,5 +38,14 @@
   display: block;
   @media (--mediumDown) {
     display: none;
+  }
+}
+
+.buttonContainer {
+
+  @media(--xxsmallDown) {
+  display: block;
+  width: 40px;
+  margin-left: auto;
   }
 }
