--- a/features/login/organisms/Footer/Footer.css
+++ b/features/login/organisms/Footer/Footer.css
@@ -1,8 +1,9 @@
 .footer {
   position: relative;
   display: flex;
-  padding: 24px 24px 0;
+  padding: 24px 0;
   font: var(--text14-20);
+  align-items: center;
 
   &::after {
     position: absolute;
