--- a/features/landing/features/partners/organisms/PartnersList/PartnersList.css
+++ b/features/landing/features/partners/organisms/PartnersList/PartnersList.css
@@ -41,6 +41,9 @@
   display: flex;
   flex-wrap: wrap;
   margin: 48px 0 0 0;
+  overflow: scroll;
+  overscroll-behavior: contain;
+  scrollbar-width: none;
 
   @media (--mediumDown) {
     justify-content: center;
@@ -50,6 +53,11 @@
   @media (--smallDown) {
     justify-content: space-between;
   }
+}
+
+
+.partnersList::-webkit-scrollbar {
+  display: none;
 }
 
 .partnerCard.partnerCard {
