--- a/features/admin/features/statistics/Statistics.css
+++ b/features/admin/features/statistics/Statistics.css
@@ -1,24 +1,3 @@
-.radioGroup {
-  display: flex;
-  align-items: center;
-
-  & > label {
-    margin-right: 30px;
-    & > input {
-      margin-right: 10px;
-    }
-  }
-}
-
-.range {
-  display: block;
-  margin-top: 40px;
-
-  & > * {
-    margin-left: 10px !important;
-  }
-}
-
-.download {
-  margin-top: 40px;
+.tab {
+  padding-bottom: 24px;
 }
