--- a/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
+++ b/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
@@ -46,10 +46,11 @@
 
 .image {
   width: 100%;
-  max-width: 160px;
-  max-height: 160px;
+  width: 160px;
+  height: 160px;
   margin: 0 0 16px 0;
   border-radius: 50%;
+  object-fit: cover;
 
   @media (--smallDown) {
     max-width: 128px;
