--- a/features/landing/features/experts/features/Expert/page/ExpertPage.css
+++ b/features/landing/features/experts/features/Expert/page/ExpertPage.css
@@ -53,7 +53,9 @@
 
 .photo {
   float: left;
-  max-width: 160px;
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
   margin: 0 32px 0 0;
   border-radius: 50%;
 
