feat(restore-password): add modal

--- a/features/login/features/restorePassword/organisms/Modal/RestorePasswordModal.css
+++ b/features/login/features/restorePassword/organisms/Modal/RestorePasswordModal.css
@@ -59,3 +59,28 @@
 .footer {
   font: var(--text14-20);
 }
+
+.actionButton {
+  display: inline-block;
+  padding: 0 !important;
+  font: var(--text14-20) !important;
+  color: var(--color-link);
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid transparent;
+  border-radius: 0;
+  box-shadow: none;
+
+  &:hover {
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+
+  &:active {
+    background-color: transparent;
+  }
+
+  &:focus {
+    background-color: transparent;
+  }
+}
