--- a/features/login/features/restorePassword/organisms/Modal/RestorePasswordModal.css
+++ b/features/login/features/restorePassword/organisms/Modal/RestorePasswordModal.css
@@ -61,7 +61,6 @@
 }
 
 .actionButton {
-  display: inline-block;
   padding: 0 !important;
   font: var(--text14-20) !important;
   color: var(--color-link);
@@ -71,6 +70,7 @@
   border-bottom: 1px solid transparent;
   border-radius: 0;
   box-shadow: none;
+  margin: 0 0 12px auto;
 
   &:hover {
     border-bottom: 1px solid var(--color-link-underline);
