feat(answers): add presave state

--- a/features/doctor/features/answers/organisms/Answers/Answers.css
+++ b/features/doctor/features/answers/organisms/Answers/Answers.css
@@ -9,7 +9,8 @@
   }
 }
 
-.textarea {
-  margin-bottom: 12px;
-  white-space: pre-line;
+.cancel {
+  margin-right: auto;
+  order: 1;
+  margin-left: 0;
 }
