--- a/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
+++ b/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
@@ -2,6 +2,7 @@
   max-width: 160px;
   margin: 0 32px 64px;
   text-align: center;
+  animation: fade 1s ease-in;
 
   &:first-of-type {
     margin-left: 0;
@@ -41,6 +42,15 @@
     &:nth-of-type(2n) {
       margin: 0 0 32px 16px;
     }
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
