fix(experts): fix shuffle

--- a/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
+++ b/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
@@ -19,9 +19,10 @@
 
 .photo {
   width: 100%;
-  max-width: 128px;
-  min-height: 128px;
+  width: 128px;
+  height: 128px;
   border-radius: 50%;
+  object-fit: cover;
 
   @media (--mediumDown) {
     grid-gap: 16px;
