--- a/features/common/chat/page/Chat.css
+++ b/features/common/chat/page/Chat.css
@@ -47,6 +47,7 @@
   padding: 12px 44px 12px 41px !important;
   margin: 0 !important;
   border-radius: 0 !important;
+  resize: none;
 
   & > * {
     margin-top: auto !important;
