--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -4,7 +4,7 @@
   background-color: transparent;
   border: none;
   border-radius: 8px;
-  transition: background-color 0.2s;
+  transition: border-color 0.2s, background-color 0.2s;
 
   &[disabled] {
     opacity: 0.4;
@@ -14,6 +14,7 @@
 /* kind */
 
 .primary {
+  transition: border-color 0.2s, background-color 0.2s;
   color: #fff;
   background-color: var(--color-primary);
   box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
@@ -33,6 +34,7 @@
 }
 
 .secondary {
+  transition: border-color 0.2s, background-color 0.2s;
   color: var(--color-link);
   border: 1px solid rgba(60, 84, 238, 0.65);
 
@@ -47,6 +49,7 @@
 }
 
 .extra {
+  transition: border-color 0.2s, background-color 0.2s;
   color: var(--color-text-primary);
   background-color: var(--color-inactive);
   border: 1px solid #dcdce7;
@@ -67,6 +70,7 @@
 /* size */
 
 .extra-large {
+  transition: border-color 0.2s, background-color 0.2s;
   padding: 17px 36px 19px 36px;
   font: var(--text18-28);
 
