--- a/src/ui/nav-link/NavLink.css
+++ b/src/ui/nav-link/NavLink.css
@@ -1,6 +1,7 @@
 .navlink {
   font: var(--text16-24);
   text-decoration: none;
+  border-bottom: 1px solid transparent;
 
   &:focus {
     text-decoration: none;
@@ -11,6 +12,7 @@
 .link {
   color: var(--color-link);
   border-bottom: 1px solid transparent;
+  transition: border-color 0.2s;
 
   &:hover {
     color: var(--color-link);
@@ -26,6 +28,7 @@
 
 .nav {
   color: var(--text-color-primary);
+  transition: color 0.2s;
 
   &:hover {
     color: var(--color-link);
